Address PR #2 review feedback
- AbstractSemiconductor: Add instanceof guard before LossProperties cast
  to prevent ClassCastException when getVerlustBerechnung() returns a
  non-LossProperties implementation

- DialogNonLinearity: Use proper URL(base, path) constructor instead of
  string concatenation with URI.create() for consistency with codebase

- dev-ci.yml: Clarify comment to distinguish Maven "Errors" (environment
  issues in headless CI) from "Failures" (assertion failures)

- README.md: Update test status to note GUI vs headless environment
  differences

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>